--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <h1>Ini's WEBD pages</h1>
 </header>
 <section>
-<p><a href="day2/index.htm" target="_self">Day 2 webpage</a></p>
-<p><a href="day2/index.htm" target="_self">Day 3 webpage</a></p>
-<p><a href="day4/index.htm" target="_self">Day 4 webpage</a></p>
-<p><a href="day5/index.html" target="_self">Day 5 webpage</a></p>
-<p><a href="day6/table.html" target="_self">Day 6 webpage</a></p>
-<p><a href="day6/table.html" target="_self">Day 7 webpage</a></p>
-<p><a href="day8/responsive.html" target="_self">Day 8 webpage</a></p>
+<p><a href="day2/index.html" target="_self">Day 2 webpage</a></p>
+<p><a href="day2/index.html" target="_self">Day 3 webpage</a></p>
+<p><a href="day4/index" target="_self">Day 4 webpage</a></p>
+<p><a href="day5/index" target="_self">Day 5 webpage</a></p>
+<p><a href="day6/index.html" target="_self">Day 6 webpage</a></p>
+<p><a href="day6/index.html" target="_self">Day 7 webpage</a></p>
+<p><a href="day8/index.html" target="_self">Day 8 webpage</a></p>
 <p><a href="day9/day9.jhtml.html" target="_self">Day 9 webpage</a></p>
-<p><a href="Day10index.html" target="_self">Day 10 webpage</a></p>
-<p><a href="FinalProject/final.html" target="_self">Final Project webpage</a></p>
+<p><a href="index10" target="_self">Day 10 webpage</a></p>
+<p><a href="index" target="_self">Final Project webpage</a></p>
 </section>
 </body>
 </html>
