--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p><a href="day6/index.html" target="_self">Day 6 webpage</a></p>
 <p><a href="day6/index.html" target="_self">Day 7 webpage</a></p>
 <p><a href="day8/index.html" target="_self">Day 8 webpage</a></p>
-<p><a href="day9/day9.jhtml.html" target="_self">Day 9 webpage</a></p>
+<p><a href="day9/day9.jhtml" target="_self">Day 9 webpage</a></p>
 <p><a href="index10" target="_self">Day 10 webpage</a></p>
 <p><a href="index" target="_self">Final Project webpage</a></p>
 </section>
