--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <p><a href="day6/index.html" target="_self">Day 7 webpage</a></p>
 <p><a href="day8/index.html" target="_self">Day 8 webpage</a></p>
 <p><a href="day9/day9.jhtml" target="_self">Day 9 webpage</a></p>
-<p><a href=day10/"index10.html" target="_self">Day 10 webpage</a></p>
-<p><a href=day10/"index.html" target="_self">Final Project webpage</a></p>
+<p><a href="day10/index10.html" target="_self">Day 10 webpage</a></p>
+<p><a href="day10/index10.html" target="_self">Final Project webpage</a></p>
 </section>
 </body>
 </html>
