--- a/day10/pages/index10.html
+++ b/day10/pages/index10.html
@@ -10,7 +10,7 @@
 <body>
 
 <section class="header">
-  <img src="./logo-01.png" width="50px" height="50px">
+  <img src="day10/pictures/logo-01.png" width="50px" height="50px">
 
   <h1 style="text-align: center;">Planet trees</h1>
 </section>
@@ -42,28 +42,28 @@
     <br>
     <li><a href="https://www.climateproof.ca/">climate proof</li>
       <p>We are a broad coalition of insurance industry representatives, municipal governments, Indigenous organizations, environmental NGOs and research organizations.</p>
-      <img src="./Climate-Proof-logo-footer.png">
+      <img src="day10/pictures/Climate-Proof-logo-footer.png">
 
       <br>
       <br>
       <br>
       <li><a href="https://www.canadahelps.org/en/donate-to-environmental-charities-giving-back-to-the-planet/">canada help </li>
         <p>our goal To inform, inspire, and connect donors and charities, and to democratize access to effective technology and education in the charitable sector.</p>
-        <img src="./canadahelps-logo-thumbnail.png">
+        <img src="day10/pictures/canadahelps-logo-thumbnail.png">
 
         <br>
         <br>
         <br>
         <li><a href="https://www.edf.org/fight-global-warming">Eviromental defence fund</li> 
           <p>For more than 50 years we’ve been pioneers, using science and different perspectives to make the environment safer and healthier for us all.</p> 
-          <img src="./edf-logo-1200x630.jpg" width="300px" height="150px">
+          <img src="day10/pictures/edf-logo-1200x630.jpg" width="300px" height="150px">
  
           <br>
           <br>
           <br>
           <li><a href="https://www.globalgiving.org/climate-action-fund/">global giving</li>
             <p>GlobalGiving is a nonprofit that supports other nonprofits by connecting them to donors and companies. Since 2002, we've helped trusted, community-led organizations from Afghanistan to Zimbabwe (and hundreds of places in between) access the tools, training, and support they need to make our world a better place.</p>  
-            <img src="./GG_logo_horizontal_440w.png" >
+            <img src="day10/pictures/GG_logo_horizontal_440w.png" >
 
 
 </section>
