--- a/day10/pages/index10.html
+++ b/day10/pages/index10.html
@@ -5,7 +5,7 @@
 </head>
 <!--this is inis final project-->
 <title>Ini Adedeji</title>
-<link rel=stylesheet type="text/css" href="./day10style.css">
+<link rel=stylesheet type="text/css" href="day10/css/day10style.css">
 </html>
 <body>
 
