--- a/day10/pages/day10wbpage.html
+++ b/day10/pages/day10wbpage.html
@@ -5,31 +5,31 @@
 </head>
 <title>Ini Adedeji</title>
 <body style="background-color: rgb(38, 77, 46);">
-    <img src="./logo-01.png" width="50px" height="50px">
+    <img src="day10/pictures/logo-01.png" width="50px" height="50px">
   
 <h1>Webpage plan</h1>
 <br>
-<img src="./Screenshot 2021-07-16 133329.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-16 133329.png" alt="Webpage plan">
 <br>
 <h2>index page</h2>
 <br>
-<img src="./Screenshot 2021-07-19 123837.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-19 123837.png" alt="Webpage plan">
 <br>
 <h3>table page</h3>
 <br>
-<img src="./Screenshot 2021-07-19 123919.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-19 123919.png" alt="Webpage plan">
 <br>
 <h4>form page</h4>
 <br>
-<img src="./Screenshot 2021-07-19 124012.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-19 124012.png" alt="Webpage plan">
 <br>
 <h5 style="text-align: center;">about page</h5>
 <br>
-<img src="./Screenshot 2021-07-19 124052.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-19 124052.png" alt="Webpage plan">
 <br>
 <h6>webpage plan page</h6>
 <br>
-<img src="./Screenshot 2021-07-19 124114.png" alt="Webpage plan">
+<img src="day10/pictures/Screenshot 2021-07-19 124114.png" alt="Webpage plan">
 <footer>
     <section style="padding: 70px;
     border: 5px solid #ffffff;" >
